--- a/etfood-api/src/main/resources/application.properties
+++ b/etfood-api/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#Configuracao conexao
+spring.datasource.url=jdbc:mysql://localhost:3306/etfood?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
