--- a/etfood-api/src/main/resources/application.properties
+++ b/etfood-api/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/etfood?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 
