--- a/etfood-api/src/main/resources/application.properties
+++ b/etfood-api/src/main/resources/application.properties
@@ -3,11 +3,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/etfood?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=root
 
+#DDL via JPA/Hibernate
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 
+#DDL via schema-generation
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
 spring.jpa.show-sql=true
 
+#Pool de conexão
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
