--- a/etfood-api/src/main/resources/application.properties
+++ b/etfood-api/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.datasource.password=root
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
+#Callback do Flyway
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
 spring.jpa.show-sql=true
 
 #Pool de conexão
