--- a/etfood-api/src/main/resources/application.properties
+++ b/etfood-api/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.datasource.hikari.idle-timeout=10000
 #Json 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
+
+#Exception
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
