--- a/etfood-api/src/main/resources/application.properties
+++ b/etfood-api/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.datasource.hikari.idle-timeout=10000
 #Json 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
+#spring.jackson.property-naming-strategy=SNAKE_CASE
 
 #Exception
 spring.mvc.throw-exception-if-no-handler-found=true
